@@ -386,7 +386,7 @@ static int weekDay(double t)
   return wd;
 }
 
-static double timeZoneOffset(const struct tm *t)
+static long timeZoneOffset(const struct tm *t)
 {
 #if defined BSD || defined(__linux__) || defined(__APPLE__)
   return -(t->tm_gmtoff / 60);
@@ -1091,7 +1091,7 @@ double KRFCDate_parseDate(const UString &_date)
      // We ignore the weekday
      //
      double result = -1;
-     int offset = 0;
+     long offset = 0;
      bool have_tz = false;
      char *newPosStr;
      const char *dateString = _date.ascii();
@@ -1300,8 +1300,6 @@ double KRFCDate_parseDate(const UString &_date)
        dateString = newPosStr;
      }
 
-     // don't fail if the time zone is missing, some
-     // broken mail-/news-clients omit the time zone
      if (*dateString) {
        if (strncasecmp(dateString, "GMT", 3) == 0 ||
 	   strncasecmp(dateString, "UTC", 3) == 0) {
@@ -1344,9 +1342,21 @@ double KRFCDate_parseDate(const UString &_date)
              break;
            }
          }
-         // Bail out if we found an unknown timezone
-         if (!have_tz)
+         // If the time zone is missing or malformed, substitute the local time zone. 
+         // Some websites (4275206) omit the time zone.
+         if (!have_tz) {
+           time_t now;
+           struct tm t;
+           
+           time(&now);
+           if (now == -1)
              return invalidDate;
+           
+           localtime_r(&now, &t);
+           offset = -timeZoneOffset(&t);
+           
+           have_tz = true;
+         }
        }
      }
 
@@ -1384,7 +1394,7 @@ double KRFCDate_parseDate(const UString &_date)
        return makeTime(&t, 0, false) / 1000.0;
      }
      
-     result = ymdhms_to_seconds(year, month+1, day, hour, minute, second) - (offset*60);
+     result = ymdhms_to_seconds(year, month+1, day, hour, minute, second) - (offset * 60);
      return result;
 }
 
